--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mime": "^1.3.4",
     "mongodb": "^2.2.25",
+    "multer": "^1.3.0",
     "node-env-file": "^0.1.8",
     "nodemon": "^1.11.0"
   }
